fix overflow

--- a/client/src/components/ServerConnectionModal.scss
+++ b/client/src/components/ServerConnectionModal.scss
@@ -23,6 +23,8 @@
     justify-content: space-between;
 }
 .modal.server-connection .modal-body {
+    overflow: hidden;
+
     .main-row {
         min-height: 60vh;
     }
